--- a/style.scss
+++ b/style.scss
@@ -83,7 +83,8 @@ header {
                     a {
                         color: #8987A1;
                         transition: 0.3s ease-in-out;
-                        &:hover{
+
+                        &:hover {
                             color: #000;
                         }
                     }
@@ -98,9 +99,11 @@ header {
                     &:last-child {
                         padding-left: 30px;
                         margin-right: 0;
+
                         a {
                             position: relative;
-                            img{
+
+                            img {
                                 width: 24px;
                                 margin-right: 5px;
                                 position: absolute;
@@ -108,6 +111,7 @@ header {
                                 top: 50%;
                                 transform: translateY(-50%);
                             }
+
                             color: #000;
                         }
                     }
@@ -117,15 +121,17 @@ header {
     }
 }
 
-.hero-section{
+.hero-section {
     padding: 200px 0 100px 0;
-    .hero-inner{
+
+    .hero-inner {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: flex-end;
         gap: 15px;
-        .left-section{
-            h1{
+
+        .left-section {
+            h1 {
                 font-size: 65px;
                 font-weight: bold;
                 font-family: $font-noto;
@@ -133,16 +139,436 @@ header {
                 color: #E95A08;
                 margin-top: 0;
                 margin-bottom: 0;
-                span{
+
+                span {
                     color: #000;
                 }
             }
-            p{
+
+            p {
                 margin-top: 15px;
                 margin-bottom: 0;
                 font-size: 22px;
                 color: rgba(0, 0, 0, 0.5);
             }
         }
+    }
+}
+
+.our-plants-section {
+    margin-bottom: 180px;
+
+    .our-plants-inner {
+        .title-para-wrapper {
+            text-align: center;
+            margin-bottom: 50px;
+
+            h2 {
+                margin-top: 0;
+                margin-bottom: 15px;
+                font-size: 50px;
+                font-family: $font-noto;
+                font-weight: bold;
+                color: #E95A08;
+
+                span {
+                    color: rgba(0, 0, 0, 1);
+                }
+            }
+
+            p {
+                margin: 0;
+                color: rgba(0, 0, 0, 0.5);
+                font-size: 22px;
+            }
+        }
+
+        .plants-inner-wrapper {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+
+            .plants-box {
+                margin-bottom: 20px;
+
+                .image-wrapper {
+                    img {
+                        width: 100%;
+                    }
+                }
+
+                .name-price-wrapper {
+                    text-align: center;
+                    margin: 20px 0;
+
+                    h4 {
+                        margin-top: 0;
+                        margin-bottom: 5px;
+                        font-size: 22px;
+                        font-weight: 500;
+                        color: #111111;
+                    }
+
+                    h3 {
+                        font-size: 22px;
+                        font-weight: bold;
+                        color: #111111;
+                        margin: 0;
+                    }
+                }
+
+                .link-wrapper {
+                    a {
+                        display: block;
+                        background-color: #E95A08;
+                        text-align: center;
+                        color: #fff;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        padding: 15px 5px;
+                        transition: 0.3s ease-in-out;
+
+                        &:hover {
+                            background-color: #252432;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.trusted-flower-section {
+    .trusted-flower-inner {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 60px;
+        align-items: center;
+
+        .left-section {
+            position: relative;
+            z-index: 1;
+
+            .trusted-img {
+                width: 100%;
+            }
+
+            .trusted-icon {
+                img {
+                    width: 286px;
+                    position: absolute;
+                    top: -130px;
+                    right: -95px;
+                    -webkit-animation: spin 15s linear infinite;
+                    -moz-animation: spin 15s linear infinite;
+                    -o-animation: spin 15s linear infinite;
+                    animation: spin 15s linear infinite;
+
+                    &:hover {
+                        animation-play-state: paused;
+                    }
+                }
+            }
+        }
+
+        .right-section {
+            h2 {
+                color: #000;
+                font-size: 50px;
+                font-weight: bold;
+                margin-top: 0;
+                margin-bottom: 30px;
+                font-family: $font-noto;
+            }
+
+            ul {
+                margin: 0;
+                padding-left: 0;
+                max-width: 94%;
+                margin-left: 3%;
+
+                li {
+                    color: rgba(0, 0, 0, 0.5);
+                    list-style: none;
+                    padding-left: 20px;
+                    position: relative;
+
+                    &:last-child {
+                        p {
+                            margin-bottom: 0;
+                        }
+                    }
+
+                    &::before {
+                        position: absolute;
+                        left: 0;
+                        top: 11px;
+                        width: 7px;
+                        height: 7px;
+                        content: "";
+                        background-color: rgba(0, 0, 0, 0.5);
+                        border-radius: 50%;
+                    }
+
+                    p {
+                        margin-bottom: 10px;
+                        font-size: 22px;
+                        margin-top: 0;
+                        margin-bottom: 30px;
+                    }
+                }
+
+            }
+        }
+    }
+}
+
+.latest-deals-section {
+    margin: 100px 0;
+
+    .latest-deals-inner {
+        .title-para-wrapper {
+            text-align: center;
+            margin-bottom: 80px;
+
+            h2 {
+                margin-top: 0;
+                margin-bottom: 15px;
+                font-size: 50px;
+                font-family: $font-noto;
+                font-weight: bold;
+                color: #E95A08;
+
+                span {
+                    color: rgba(0, 0, 0, 1);
+                }
+            }
+
+            p {
+                margin: 0;
+                color: rgba(0, 0, 0, 0.5);
+                font-size: 22px;
+            }
+        }
+
+        .latest-inner {
+            display: grid;
+            grid-template-columns: 367px 1fr;
+            gap: 28px;
+
+            .left-section {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 25px;
+
+                .box-wrapper {
+                    border-radius: 14px;
+                    overflow: hidden;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    z-index: 1;
+                    min-height: 200px;
+
+                    &::before {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        content: "";
+                        background-color: rgba(0, 0, 0, 0.4);
+                        z-index: -1;
+                    }
+
+                    h4 {
+                        font-size: 20px;
+                        font-family: $font-noto;
+                        font-weight: bold;
+                        margin: 0;
+                        color: #ffffff;
+                    }
+
+                    .link-wrapper {
+                        a {
+                            font-weight: 600;
+                            color: #fff;
+                            text-decoration: underline;
+                            transition: 0.3s ease-in-out;
+
+                            &:hover {
+                                text-decoration: none;
+                                color: #E95A08;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .right-section {
+                .box-wrapper {
+                    border-radius: 14px;
+                    overflow: hidden;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    z-index: 1;
+
+                    &::before {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        content: "";
+                        background-color: rgba(0, 0, 0, 0.4);
+                        z-index: -1;
+                    }
+
+                    h4 {
+                        font-size: 40px;
+                        font-family: $font-noto;
+                        font-weight: bold;
+                        margin: 0;
+                        color: #ffffff;
+                    }
+
+                    .link-wrapper {
+                        a {
+                            font-weight: 600;
+                            color: #fff;
+                            text-decoration: underline;
+                            transition: 0.3s ease-in-out;
+                            font-size: 28px;
+
+                            &:hover {
+                                text-decoration: none;
+                                color: #E95A08;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.join-section{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    min-height: 533px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    &::before{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        content: "";
+        background-color: rgba(7, 51, 79, .4);
+        z-index: -1;
+    }
+    .join-inner{
+        h2{
+            font-size: 50px;
+            font-weight: bold;
+            color: #fff;
+            font-family: $font-noto;
+            margin: 0;
+            margin-bottom: 20px;
+        }
+        form{
+            .form-group{
+                display: flex;
+                flex-direction: row;
+
+                input{
+                    min-width: 644px;
+                    background-color: #fff;
+                    border: none;
+                    box-shadow: none;
+                    padding: 18.5px;
+                    &:focus{
+                        box-shadow: none;
+                        outline: none;
+                        border: none;
+                    }
+                }
+                button{
+                    border: none;
+                    box-shadow: none;
+                    background-color: #E95A08;
+                    font-weight: 600;
+                    color: #fff;
+                    width: 186px;
+                    cursor: pointer;
+                    transition: 0.3s ease-in-out;
+                    &:hover{
+                        background-color: #252432;
+                        
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-o-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
