--- a/style.css
+++ b/style.css
@@ -437,6 +437,58 @@ header .header-inner .right-menu ul li:last-child a img {
   background-color: #252432;
 }
 
+footer {
+  background-color: #fff;
+  padding: 70px 0;
+}
+footer .footer-inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 50px;
+}
+footer .footer-inner .left-logo-para-section .logo-wrapper {
+  margin-bottom: 15px;
+}
+footer .footer-inner .left-logo-para-section .logo-wrapper a img {
+  max-width: 135px;
+}
+footer .footer-inner .left-logo-para-section p {
+  font-size: 22px;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.5);
+  max-width: 360px;
+}
+footer .footer-inner .footer-link-wrapper ul {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 100px;
+  row-gap: 30px;
+}
+footer .footer-inner .footer-link-wrapper ul li {
+  list-style: none;
+}
+footer .footer-inner .footer-link-wrapper ul li a {
+  color: gray;
+  font-weight: 500;
+  transition: 0.3s ease-in-out;
+}
+footer .footer-inner .footer-link-wrapper ul li a:hover {
+  color: #E95A08;
+}
+footer .footer-inner .footer-social-link-wrapper ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+}
+footer .footer-inner .footer-social-link-wrapper ul li {
+  list-style: none;
+}
 @-webkit-keyframes spin {
   100% {
     -webkit-transform: rotate(360deg);
