--- a/style.scss
+++ b/style.scss
@@ -468,7 +468,7 @@ header {
     }
 }
 
-.join-section{
+.join-section {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -479,7 +479,8 @@ header {
     justify-content: center;
     align-items: center;
     text-align: center;
-    &::before{
+
+    &::before {
         position: absolute;
         left: 0;
         top: 0;
@@ -489,8 +490,9 @@ header {
         background-color: rgba(7, 51, 79, .4);
         z-index: -1;
     }
-    .join-inner{
-        h2{
+
+    .join-inner {
+        h2 {
             font-size: 50px;
             font-weight: bold;
             color: #fff;
@@ -498,24 +500,27 @@ header {
             margin: 0;
             margin-bottom: 20px;
         }
-        form{
-            .form-group{
+
+        form {
+            .form-group {
                 display: flex;
                 flex-direction: row;
 
-                input{
+                input {
                     min-width: 644px;
                     background-color: #fff;
                     border: none;
                     box-shadow: none;
                     padding: 18.5px;
-                    &:focus{
+
+                    &:focus {
                         box-shadow: none;
                         outline: none;
                         border: none;
                     }
                 }
-                button{
+
+                button {
                     border: none;
                     box-shadow: none;
                     background-color: #E95A08;
@@ -524,10 +529,85 @@ header {
                     width: 186px;
                     cursor: pointer;
                     transition: 0.3s ease-in-out;
-                    &:hover{
+
+                    &:hover {
                         background-color: #252432;
-                        
+
                     }
+                }
+            }
+        }
+    }
+}
+
+
+footer {
+    background-color: #fff;
+    padding: 70px 0;
+
+    .footer-inner {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 50px;
+
+        .left-logo-para-section {
+            .logo-wrapper {
+                margin-bottom: 15px;
+
+                a {
+                    img {
+                        max-width: 135px;
+                    }
+                }
+            }
+
+            p {
+                font-size: 22px;
+                margin: 0;
+                color: rgba(0, 0, 0, 0.5);
+                max-width: 360px;
+            }
+        }
+
+        .footer-link-wrapper {
+            ul {
+                margin: 0;
+                padding: 0;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: 100px;
+                row-gap: 30px;
+
+                li {
+                    list-style: none;
+
+                    a {
+                        color: gray;
+                        font-weight: 500;
+                        transition: 0.3s ease-in-out;
+
+                        &:hover {
+                            color: #E95A08;
+                        }
+                    }
+                }
+            }
+        }
+
+        .footer-social-link-wrapper {
+            ul {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 30px;
+
+                li {
+                    list-style: none;
+
+                    a {}
                 }
             }
         }
