--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ header .header-inner .left-logo a {
 header .header-inner .left-logo a img {
   max-width: 135px;
 }
+@media (max-width: 991px) {
+  header .header-inner .left-logo a img {
+    max-width: 63px;
+  }
+}
 header .header-inner .right-menu ul {
   margin: 0;
   padding: 0;
@@ -68,6 +73,11 @@ header .header-inner .right-menu ul li {
   list-style: none;
   display: inline-block;
   margin: 0 25px;
+}
+@media (max-width: 991px) {
+  header .header-inner .right-menu ul li {
+    display: none;
+  }
 }
 header .header-inner .right-menu ul li a {
   color: #8987A1;
@@ -83,6 +93,11 @@ header .header-inner .right-menu ul li:first-child a {
 header .header-inner .right-menu ul li:last-child {
   padding-left: 30px;
   margin-right: 0;
+}
+@media (max-width: 991px) {
+  header .header-inner .right-menu ul li:last-child {
+    display: block;
+  }
 }
 header .header-inner .right-menu ul li:last-child a {
   position: relative;
@@ -100,11 +115,23 @@ header .header-inner .right-menu ul li:last-child a img {
 .hero-section {
   padding: 200px 0 100px 0;
 }
+@media (max-width: 991px) {
+  .hero-section {
+    padding: 50px 0;
+  }
+}
 .hero-section .hero-inner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-end;
   gap: 15px;
+}
+@media (max-width: 991px) {
+  .hero-section .hero-inner {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
 }
 .hero-section .hero-inner .left-section h1 {
   font-size: 65px;
@@ -115,6 +142,11 @@ header .header-inner .right-menu ul li:last-child a img {
   margin-top: 0;
   margin-bottom: 0;
 }
+@media (max-width: 991px) {
+  .hero-section .hero-inner .left-section h1 {
+    font-size: 24px;
+  }
+}
 .hero-section .hero-inner .left-section h1 span {
   color: #000;
 }
@@ -123,6 +155,19 @@ header .header-inner .right-menu ul li:last-child a img {
   margin-bottom: 0;
   font-size: 22px;
   color: rgba(0, 0, 0, 0.5);
+}
+@media (max-width: 991px) {
+  .hero-section .hero-inner .left-section p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 991px) {
+  .hero-section .hero-inner .right-flower-image {
+    margin-right: -15px;
+  }
+}
+.hero-section .hero-inner .right-flower-image img {
+  width: 100%;
 }
 
 .our-plants-section {
@@ -140,6 +185,11 @@ header .header-inner .right-menu ul li:last-child a img {
   font-weight: bold;
   color: #E95A08;
 }
+@media (max-width: 991px) {
+  .our-plants-section .our-plants-inner .title-para-wrapper h2 {
+    font-size: 24px;
+  }
+}
 .our-plants-section .our-plants-inner .title-para-wrapper h2 span {
   color: rgb(0, 0, 0);
 }
@@ -148,10 +198,25 @@ header .header-inner .right-menu ul li:last-child a img {
   color: rgba(0, 0, 0, 0.5);
   font-size: 22px;
 }
+@media (max-width: 991px) {
+  .our-plants-section .our-plants-inner .title-para-wrapper p {
+    font-size: 14px;
+  }
+}
 .our-plants-section .our-plants-inner .plants-inner-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+}
+@media (max-width: 1400px) {
+  .our-plants-section .our-plants-inner .plants-inner-wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 991px) {
+  .our-plants-section .our-plants-inner .plants-inner-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .our-plants-section .our-plants-inner .plants-inner-wrapper .plants-box {
   margin-bottom: 20px;
@@ -170,11 +235,21 @@ header .header-inner .right-menu ul li:last-child a img {
   font-weight: 500;
   color: #111111;
 }
+@media (max-width: 991px) {
+  .our-plants-section .our-plants-inner .plants-inner-wrapper .plants-box .name-price-wrapper h4 {
+    font-size: 16px;
+  }
+}
 .our-plants-section .our-plants-inner .plants-inner-wrapper .plants-box .name-price-wrapper h3 {
   font-size: 22px;
   font-weight: bold;
   color: #111111;
   margin: 0;
+}
+@media (max-width: 991px) {
+  .our-plants-section .our-plants-inner .plants-inner-wrapper .plants-box .name-price-wrapper h3 {
+    font-size: 16px;
+  }
 }
 .our-plants-section .our-plants-inner .plants-inner-wrapper .plants-box .link-wrapper a {
   display: block;
@@ -196,6 +271,11 @@ header .header-inner .right-menu ul li:last-child a img {
   gap: 60px;
   align-items: center;
 }
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 .trusted-flower-section .trusted-flower-inner .left-section {
   position: relative;
   z-index: 1;
@@ -213,6 +293,11 @@ header .header-inner .right-menu ul li:last-child a img {
   -o-animation: spin 15s linear infinite;
   animation: spin 15s linear infinite;
 }
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .left-section .trusted-icon img {
+    display: none;
+  }
+}
 .trusted-flower-section .trusted-flower-inner .left-section .trusted-icon img:hover {
   animation-play-state: paused;
 }
@@ -224,11 +309,27 @@ header .header-inner .right-menu ul li:last-child a img {
   margin-bottom: 30px;
   font-family: "Noto Serif", serif;
 }
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .right-section h2 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .right-section h2 br {
+    display: none;
+  }
+}
 .trusted-flower-section .trusted-flower-inner .right-section ul {
   margin: 0;
   padding-left: 0;
   max-width: 94%;
   margin-left: 3%;
+}
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .right-section ul {
+    max-width: 100%;
+    margin-left: 1%;
+  }
 }
 .trusted-flower-section .trusted-flower-inner .right-section ul li {
   color: rgba(0, 0, 0, 0.5);
@@ -249,11 +350,23 @@ header .header-inner .right-menu ul li:last-child a img {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
 }
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .right-section ul li::before {
+    width: 5px;
+    height: 5px;
+    top: 7px;
+  }
+}
 .trusted-flower-section .trusted-flower-inner .right-section ul li p {
   margin-bottom: 10px;
   font-size: 22px;
   margin-top: 0;
   margin-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .trusted-flower-section .trusted-flower-inner .right-section ul li p {
+    font-size: 14px;
+  }
 }
 
 .latest-deals-section {
@@ -271,6 +384,11 @@ header .header-inner .right-menu ul li:last-child a img {
   font-weight: bold;
   color: #E95A08;
 }
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .title-para-wrapper h2 {
+    font-size: 24px;
+  }
+}
 .latest-deals-section .latest-deals-inner .title-para-wrapper h2 span {
   color: rgb(0, 0, 0);
 }
@@ -279,10 +397,21 @@ header .header-inner .right-menu ul li:last-child a img {
   color: rgba(0, 0, 0, 0.5);
   font-size: 22px;
 }
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .title-para-wrapper p {
+    font-size: 14px;
+  }
+}
 .latest-deals-section .latest-deals-inner .latest-inner {
   display: grid;
   grid-template-columns: 367px 1fr;
   gap: 28px;
+}
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .latest-inner {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
 }
 .latest-deals-section .latest-deals-inner .latest-inner .left-section {
   display: flex;
@@ -306,6 +435,11 @@ header .header-inner .right-menu ul li:last-child a img {
   z-index: 1;
   min-height: 200px;
 }
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .latest-inner .left-section .box-wrapper {
+    min-height: 200px;
+  }
+}
 .latest-deals-section .latest-deals-inner .latest-inner .left-section .box-wrapper::before {
   position: absolute;
   left: 0;
@@ -322,6 +456,11 @@ header .header-inner .right-menu ul li:last-child a img {
   font-weight: bold;
   margin: 0;
   color: #ffffff;
+}
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .latest-inner .left-section .box-wrapper h4 {
+    font-size: 20px;
+  }
 }
 .latest-deals-section .latest-deals-inner .latest-inner .left-section .box-wrapper .link-wrapper a {
   font-weight: 600;
@@ -348,6 +487,11 @@ header .header-inner .right-menu ul li:last-child a img {
   position: relative;
   z-index: 1;
 }
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .latest-inner .right-section .box-wrapper {
+    min-height: 200px;
+  }
+}
 .latest-deals-section .latest-deals-inner .latest-inner .right-section .box-wrapper::before {
   position: absolute;
   left: 0;
@@ -364,6 +508,11 @@ header .header-inner .right-menu ul li:last-child a img {
   font-weight: bold;
   margin: 0;
   color: #ffffff;
+}
+@media (max-width: 991px) {
+  .latest-deals-section .latest-deals-inner .latest-inner .right-section .box-wrapper h4 {
+    font-size: 20px;
+  }
 }
 .latest-deals-section .latest-deals-inner .latest-inner .right-section .box-wrapper .link-wrapper a {
   font-weight: 600;
@@ -389,6 +538,11 @@ header .header-inner .right-menu ul li:last-child a img {
   align-items: center;
   text-align: center;
 }
+@media (max-width: 991px) {
+  .join-section {
+    min-height: 275px;
+  }
+}
 .join-section::before {
   position: absolute;
   left: 0;
@@ -407,6 +561,11 @@ header .header-inner .right-menu ul li:last-child a img {
   margin: 0;
   margin-bottom: 20px;
 }
+@media (max-width: 991px) {
+  .join-section .join-inner h2 {
+    font-size: 20px;
+  }
+}
 .join-section .join-inner form .form-group {
   display: flex;
   flex-direction: row;
@@ -417,6 +576,17 @@ header .header-inner .right-menu ul li:last-child a img {
   border: none;
   box-shadow: none;
   padding: 18.5px;
+}
+@media (max-width: 1400px) {
+  .join-section .join-inner form .form-group input {
+    min-width: 80%;
+  }
+}
+@media (max-width: 991px) {
+  .join-section .join-inner form .form-group input {
+    min-width: unset;
+    width: 100%;
+  }
 }
 .join-section .join-inner form .form-group input:focus {
   box-shadow: none;
@@ -447,6 +617,12 @@ footer .footer-inner {
   justify-content: space-between;
   gap: 50px;
 }
+@media (max-width: 991px) {
+  footer .footer-inner {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
 footer .footer-inner .left-logo-para-section .logo-wrapper {
   margin-bottom: 15px;
 }
@@ -459,6 +635,12 @@ footer .footer-inner .left-logo-para-section p {
   color: rgba(0, 0, 0, 0.5);
   max-width: 360px;
 }
+@media (max-width: 991px) {
+  footer .footer-inner .left-logo-para-section p {
+    max-width: 100%;
+    font-size: 16px;
+  }
+}
 footer .footer-inner .footer-link-wrapper ul {
   margin: 0;
   padding: 0;
@@ -466,6 +648,12 @@ footer .footer-inner .footer-link-wrapper ul {
   grid-template-columns: repeat(2, 1fr);
   column-gap: 100px;
   row-gap: 30px;
+}
+@media (max-width: 991px) {
+  footer .footer-inner .footer-link-wrapper ul {
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
 }
 footer .footer-inner .footer-link-wrapper ul li {
   list-style: none;
